# nfe-sync

./: .env.example  .gitignore  .python-version  CHANGELOG.md  CLAUDE.md  README.md  apis.json.example  nfe-sync.conf.ini.example  pyproject.toml  run_api_cli  run_nfesync
.claude/: settings.local.json
nfe_sync/: __init__.py  cancelamento.py  cli.py  config.py  consulta.py  emissao.py  exceptions.py  inutilizacao.py  log.py  manifestacao.py  models.py  results.py  state.py  storage.py  xml_utils.py
nfe_sync/apis/: cli.py  cnpja.py  cnpjws.py  config.py  exceptions.py
nfe_sync/commands/: __init__.py  cancelamento.py  consulta.py  emissao.py  inutilizacao.py  manifestacao.py  sistema.py
scripts/: commit.sh  install-hooks.sh
scripts/hooks/: pre-commit
tests/: conftest.py  test_cancelamento.py  test_cli.py  test_cnpja.py  test_cnpjws.py  test_commands_cancelamento.py  test_commands_consulta.py  test_commands_emissao.py  test_commands_init.py  test_commands_inutilizacao.py  test_consulta.py  test_emitir.py  test_inutilizar.py  test_log.py  test_manifestar.py  test_models.py  test_nfe_config.py  test_results.py  test_state.py  test_storage.py  test_xml_utils.py
tests/e2e/: conftest.py  test_e2e_homolog.py  test_fluxo_completo.py  test_validacoes.py  test_versao.py
utils/: pyrun.sh  renomear_nsu.py
